--- a/day6笔记/10-获取子节点.html
+++ b/day6笔记/10-获取子节点.html
@@ -31,6 +31,9 @@
         oUl.removeChild(lastChild);
 
         // 要求：移出son2
+        var oDiv = document.getElementsByClassName('father')[0];
+        var oSpan = oDiv.children[1];
+        oDiv.removeChild(oSpan);
     </script>
 </body>
 </html>
